# quantum_comupter_simulation

./: README.md  main.py  pyproject.toml
src/qexp/algorithms/: grover.py  qaoa_max_cut.py
src/qexp/core/: noise.py  utils.py
src/qexp/qec/: bitflip_syndrome.py
src/qexp/runner/: experiment.py  sweep.py
