[tool.poetry]
name = "quantum-comupter-simulation"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{ include = "qexp", from = "src" }]

[tool.poetry.dependencies]
python = ">=3.12,<4.0"
qiskit = ">=2.3.0,<3.0.0"
qiskit-aer = ">=0.17.2,<0.18.0"
matplotlib = ">=3.10.8,<4.0.0"
pylatexenc = ">=2.10,<3.0"

[tool.poetry.group.dev.dependencies]
ipykernel = ">=7.1.0,<8.0.0"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
